src/components/App.css
.wrapper {
  width: 100%;
  height: 100%;
  display: flex;
}

p {
  color: rgb(190, 245, 255);
}

.groups-list {
  display: flex;
  width: 300px;
  flex-direction: column;
}

.members-list {
  display: flex;
  width: 300px;
  flex-direction: column;
}

.group-member {
  height: 24px;
  line-height: 24px;
  margin: 4px;
  font-size: 16px;
  background-color: #4e5158;
  color: #d9d9d9;
}

.group-name {
  cursor: pointer;
  height: 32px;
  line-height: 32px;
  background-color: #4e5158;
  margin: 4px;
  font-size: 18px;
  color: #d9d9d9;
}

.chat {
  width: calc(100% - 600px);
  height: 100%;
}

.chat-messages {
  margin: 0 16px;
  height: calc(100% - 48px);
  overflow: auto;
  display: flex;
  flex-direction: column;
}

.chat-username {
  color: white;
  text-align: left;
  width: 100%;
  margin-top: 4px;
}

.chat-username b {
  margin-right: 8px;
}

.chat-username i {
  opacity: 0.5;
}

.chat-message {
  color: #c9c9c9;
  text-align: left;
  width: 100%;
}

.chat-input {
  max-width: 100%;
  width: 100%;
}

.login {
  min-width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

